# shr_tools

./: .gitignore  AUTHORS  LICENSE  Makefile.am  NEWS  README.md  bootstrap  configure.ac
po/: servers.pot
po/es/: servers.mo  servers.po
src/: Makefile.am  conexion.h  configuration.c  configuration.h  screen_configs.c  screen_configs.h  servers.c  sync.c  utils.h
